<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".Page2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="173dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#fff5b6"
        android:text="@string/ExplicationP2"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/IMAGE1"
        android:cropToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/img1" />

    <Button
        android:id="@+id/button"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E63CB3"
        android:shadowDx="-10"
        android:shadowDy="9"
        android:shadowRadius="5"
        android:text="Choisir"

        android:textColor="#92FF8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Choisir" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/IMAGE2"
        android:shape="rectangle"
        app:layout_constraintBottom_toTopOf="@+id/angry_btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/img2" />


    <Button
        android:id="@+id/button2"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E63CB3"
        android:shadowDx="-10"
        android:shadowDy="9"
        android:shadowRadius="5"
        android:text="Choisir"

        android:textColor="#92FF8A"
        app:layout_constraintBottom_toTopOf="@+id/angry_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.352"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/angry_btn2"

        android:layout_width="294dp"
        android:layout_height="98dp"

        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E63CB3"
        android:shadowDx="-10"
        android:shadowDy="9"
        android:shadowRadius="5"
        android:text="@string/LANCER"
        android:textColor="#92FF8A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>